A few style cleanups; note that this temporarily breaks the order manager order entry layouts (they were having problems and this is the first step to fixing them too)
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4820 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/images/webapp/images/ecommain.css
+++ b/framework/images/webapp/images/ecommain.css
@@ -838,3 +838,22 @@ margin-left: 60px;
 text-align: left;
 }
 
+/* ===== Product Detail Styles ===== */
+#productdetail #long-description {
+margin-top: 10px;
+padding-top: 5px;
+border-top: #999 solid 1px;
+}
+
+#productdetail #reviews {
+margin-top: 10px;
+padding-top: 5px;
+border-top: #999 solid 1px;
+}
+
+#productdetail #associated-products {
+margin-top: 10px;
+padding-top: 5px;
+border-top: #999 solid 1px;
+}
+
